# api/src/main/resources/swagger.yaml
@@ -99,8 +99,15 @@ components:
                     $ref: '#/components/schemas/Unit'
                 category:
                     $ref: '#/components/schemas/Category'
+                quantityInStock:
+                    $ref: '#/components/schemas/QuantityInStock'
         CreateIngredientCommand:
             type: object
+            required:
+                - name
+                - description
+                - unit
+                - category
             properties:
                 name:
                     $ref: '#/components/schemas/IngredientName'
@@ -110,6 +117,8 @@ components:
                     $ref: '#/components/schemas/Unit'
                 category:
                     $ref: '#/components/schemas/Category'
+                quantityInStock:
+                    $ref: '#/components/schemas/QuantityInStock'
         Ingredient:
             type: object
             properties:
@@ -168,6 +177,7 @@ components:
             required: true
             schema:
                 type: integer
+                format: int64
         IngredientName:
             name: name
             in: query
